deploy/k8s/devops/drone-runner.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: droneci-runner
  labels:
    run: drone
    role: runner
spec:
  selector:
    run: drone
    role: runner
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: droneci-runner
  labels:
    app.kubernetes.io/name: drone
    run: drone
    role: runner
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: drone
      run: drone
      role: runner
  template:
    metadata:
      labels:
        app.kubernetes.io/name: drone
        run: drone
        role: runner
    spec:
      containers:
        - name: runner
          image: drone/drone-runner-kube:latest
          ports:
            - containerPort: 3000
