deploy/k8s/devops/drone-server.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: droneci-server
  labels:
    run: drone
    role: server
spec:
  selector:
    run: drone
    role: server
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: droneci-server
  labels:
    run: drone
    role: server
spec:
  replicas: 1
  selector:
    matchLabels:
      run: drone
      role: server
  template:
    metadata:
      labels:
        run: drone
        role: server
    spec:
      containers:
        - name: droneci-server
          image: drone/drone:1.9.1
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /data
              name: droneci-storage
      volumes:
        - name: droneci-storage
          persistentVolumeClaim:
            claimName: droneci-pvc
