deploy/k8s/devops/gitea.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: devops
  name: gitea-server
  labels:
    run: gitea
spec:
  selector:
    run: gitea
  type: ClusterIP
  ports:
    - name: http
      port: 3000
      targetPort: 3000
    - name: http2
      port: 80
      targetPort: 3000
    - name: ssh
      port: 22
      targetPort: 22
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops
  name: gitea-server
  labels:
    run: gitea
spec:
  selector:
    matchLabels:
      run: gitea
  template:
    metadata:
      labels:
        run: gitea
    spec:
      containers:
        - name: gitea-server
          image: gitea/gitea:1.12.4
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
              name: http
            - containerPort: 22
              name: ssh
          volumeMounts:
            - mountPath: /data
              name: gitea-storage
      volumes: # 挂载持久卷到Pod
        - name: gitea-storage # 持久卷名字， 与“volumMounts”名字匹配
          persistentVolumeClaim:
            claimName: gitea-pvc # 持久卷申请名字
